--- a/components/layout/header.module.css
+++ b/components/layout/header.module.css
@@ -1,8 +1,9 @@
+/* Layout Bar Styling */
 .layoutBar {
     position: fixed; /* Fixes the position to the viewport */
     width: 100%;
     height: 50px; /* Adjust the height of the layout bar */
-    background-color: #55489b; /* Bluish-purple color */
+    background-color: #2c3e50; /* Darker shade to contrast with the header */
     color: white; /* White color for the title */
     display: flex;
     align-items: center;
@@ -13,12 +14,13 @@
     outline: none; /* Remove outline */
 }
 
+/* Header Styling */
 .header {
     position: fixed; /* Fixes the position to the viewport */
     width: 100%;
-    height: 60px; /* Adjust the height of the header */
-    background-color: #333; /* Background color for the header */
-    color: white; /* Text color for the header */
+    height: 60px; /* Height of the header */
+    background-color: #1b2838; /* Dark blue to match the Navbar */
+    color: white; /* White color for the header text */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,6 +31,7 @@
     box-sizing: border-box; /* Include padding in width calculation */
 }
 
+/* Main Content Styling */
 .mainContent {
     padding: 20px;
     margin-top: 110px; /* Adjust this based on the total height of the layoutBar and header */
